[project]
name = "pixelog"
version = "0.1.0"
description = "Extract and display all colors from images with hex, RGB, and OKLCH formats"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=10.0.0",
    "colorspacious>=1.1.2",
]

[project.scripts]
pixelog = "pixelog.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pixelog"]
